--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 body{
+	
+
+.principal{
 	background: #CCCCCC;
+}
+#banner{
+	width: 100%;
 }
 
 h1{
@@ -11,6 +17,18 @@ p {
 	
 }
 
+#missao{
+	font-size: 20px;
+}
+
 em strong{
 	color: red;
+}
+
+.itens{
+	font-style: italic;
+}
+
+h2{
+	text-align: center;
 }
