--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 
 .principal {
     background: #CCCCCC;
+    padding: 30px;
 }
 
 #banner {
@@ -32,8 +33,20 @@ em strong {
 
 .beneficios {
     background: #FFFFFF;
+    padding: 20px;
 }
 
 h2 {
     text-align: center;
+}
+
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.imagembeneficios {
+    width: 50%;
 }
