--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
     
 }
 
+.titulo-principal {
+    padding-left: 20px;
+}
+
 .principal {
     background: #CCCCCC;
     padding: 30px;
@@ -11,7 +15,7 @@ body {
     width: 100%;
 }
 
-h1 {
+.titulo-centralizado {
     text-align: center;
 }
 
@@ -36,9 +40,6 @@ em strong {
     padding: 20px;
 }
 
-h2 {
-    text-align: center;
-}
 
 ul {
     display: inline-block;
